Fix travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ deploy:
     skip_cleanup: true
     on:
       branch:
-         - release/next
+         - release/master
   - provider: releases
     api_key: $GITHUB_AUTH_TOKEN
     file:
@@ -43,6 +43,5 @@ deploy:
     email: $NPM_AUTH_EMAIL
     api_key: $NPM_AUTH_TOKEN
     skip_cleanup: true
-    tag: next
     on:
       tags: true
