--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ script:
   - gulp test --coverage
   - gulp lint
   - gulp package
-  - gulp bower
 
 after_script:
   - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
@@ -30,7 +29,7 @@ deploy:
     skip_cleanup: true
     on:
       branch:
-         - release/master
+         - release/next
   - provider: releases
     api_key: $GITHUB_AUTH_TOKEN
     file:
@@ -44,5 +43,6 @@ deploy:
     email: $NPM_AUTH_EMAIL
     api_key: $NPM_AUTH_TOKEN
     skip_cleanup: true
+    tag: next
     on:
       tags: true
