--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "chartjs-chart-treemap",
-  "version": "0.2.3",
+  "version": "1.0.0-alpha",
   "description": "Chart.js module for creating treemap charts",
   "main": "dist/chartjs-chart-treemap.js",
+  "module": "dist/chartjs-chart-treemap.esm.js",
   "scripts": {
     "test": "gulp test"
   },
@@ -16,7 +17,6 @@
     "treemap"
   ],
   "files": [
-    "bower.json",
     "dist/*.js"
   ],
   "author": "Jukka Kurkela",
@@ -26,37 +26,40 @@
   },
   "homepage": "https://github.com/kurkle/chartjs-chart-treemap#readme",
   "devDependencies": {
-    "chart.js": "^2.9.3",
-    "eslint": "^5.16.0",
-    "eslint-config-chartjs": "^0.1.0",
-    "eslint-plugin-es": "^1.4.1",
-    "eslint-plugin-html": "^5.0.5",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-object-assign": "^7.8.3",
+    "@babel/preset-env": "^7.9.5",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-istanbul": "^6.0.0",
+    "chart.js": "^3.0.0-alpha",
+    "eslint": "^6.8.0",
+    "eslint-config-chartjs": "^0.2.0",
+    "eslint-config-esnext": "^4.0.0",
+    "eslint-plugin-html": "^6.0.1",
     "gulp": "^4.0.2",
-    "gulp-eslint": "^5.0.0",
-    "gulp-file": "^0.4.0",
+    "gulp-eslint": "^6.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-streamify": "^1.0.2",
     "gulp-zip": "^4.2.0",
     "jasmine-core": "^3.5.0",
-    "karma": "^4.4.1",
+    "karma": "^5.0.1",
     "karma-coverage": "^1.1.2",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "karma-rollup-preprocessor": "^7.0.3",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-rollup-preprocessor": "^7.0.5",
     "karma-spec-reporter": "0.0.32",
     "merge2": "^1.3.0",
-    "moment": "^2.24.0",
     "pixelmatch": "^4.0.2",
-    "rollup": "^1.31.1",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-istanbul": "^2.0.1",
-    "rollup-plugin-node-resolve": "^4.2.4",
-    "rollup-plugin-terser": "^4.0.4",
-    "yargs": "^13.3.0"
+    "rollup": "^2.6.0",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "yargs": "^13.3.2"
   },
   "peerDependencies": {
-    "chart.js": ">= 2.8.0 < 3"
-  },
-  "dependencies": {}
+    "chart.js": "^3.0.0-alpha"
+  }
 }
