--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "dist/chartjs-chart-treemap.js",
   "module": "dist/chartjs-chart-treemap.esm.js",
   "scripts": {
-    "test": "gulp test"
+    "autobuild": "rollup -c -w",
+    "build": "rollup -c",
+    "dev": "cross-env NODE_ENV=test karma start ---auto-watch --no-single-run --browsers chrome",
+    "docs": "cd docs && npm install && npm run build && mkdir -p ../dist && cp -r build ../dist/docs",
+    "lint": "eslint samples/**/*.html samples/**/*.js src/**/*.js test/**/*.js",
+    "test": "npm run lint && cross-env NODE_ENV=test karma start --no-auto-watch --single-run --coverage"
   },
   "repository": {
     "type": "git",
@@ -26,40 +31,38 @@
   },
   "homepage": "https://github.com/kurkle/chartjs-chart-treemap#readme",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-transform-object-assign": "^7.8.3",
-    "@babel/preset-env": "^7.9.5",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "babel-eslint": "^10.1.0",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-transform-object-assign": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@rollup/plugin-babel": "^5.0.2",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "babel-plugin-istanbul": "^6.0.0",
     "chart.js": "^3.0.0-alpha",
-    "eslint": "^6.8.0",
+    "codecov": "^3.7.0",
+    "concurrently": "^5.2.0",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.1.0",
     "eslint-config-chartjs": "^0.2.0",
-    "eslint-config-esnext": "^4.0.0",
-    "eslint-plugin-html": "^6.0.1",
-    "gulp": "^4.0.2",
-    "gulp-eslint": "^6.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-streamify": "^1.0.2",
-    "gulp-zip": "^4.2.0",
+    "eslint-config-esnext": "^4.1.0",
+    "eslint-plugin-html": "^6.0.2",
+    "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
-    "karma": "^5.0.1",
-    "karma-coverage": "^1.1.2",
+    "karma": "^5.0.9",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.2",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.5",
     "karma-spec-reporter": "0.0.32",
-    "merge2": "^1.3.0",
-    "pixelmatch": "^4.0.2",
-    "rollup": "^2.6.0",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "yargs": "^13.3.2"
+    "minimist": "^1.2.5",
+    "pixelmatch": "^5.2.0",
+    "rollup": "^2.12.0",
+    "rollup-plugin-terser": "^6.1.0"
   },
   "peerDependencies": {
     "chart.js": "^3.0.0-alpha"
-  }
+  },
+  "dependencies": {}
 }
