--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "autobuild": "rollup -c -w",
     "build": "rollup -c",
-    "dev": "cross-env NODE_ENV=test karma start ---auto-watch --no-single-run --browsers chrome",
+    "dev": "karma start ---auto-watch --no-single-run --browsers chrome",
     "docs": "cd docs && npm install && npm run build && mkdir -p ../dist && cp -r build ../dist/docs",
     "lint": "eslint samples/**/*.html samples/**/*.js src/**/*.js test/**/*.js",
-    "test": "npm run lint && cross-env NODE_ENV=test karma start --no-auto-watch --single-run --coverage"
+    "test": "npm run lint && karma start --no-auto-watch --single-run --coverage"
   },
   "repository": {
     "type": "git",
@@ -31,17 +31,11 @@
   },
   "homepage": "https://github.com/kurkle/chartjs-chart-treemap#readme",
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-transform-object-assign": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@rollup/plugin-babel": "^5.0.2",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
-    "babel-plugin-istanbul": "^6.0.0",
     "chart.js": "^3.0.0-alpha",
-    "codecov": "^3.7.0",
-    "concurrently": "^5.2.0",
-    "cross-env": "^7.0.2",
     "eslint": "^7.1.0",
     "eslint-config-chartjs": "^0.2.0",
     "eslint-config-esnext": "^4.1.0",
@@ -50,12 +44,14 @@
     "jasmine-core": "^3.5.0",
     "karma": "^5.0.9",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
+    "karma-coverage-istanbul-instrumenter": "^1.0.3",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "^3.3.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.5",
     "karma-spec-reporter": "0.0.32",
+    "karma-summary-reporter": "^1.8.0",
     "minimist": "^1.2.5",
     "pixelmatch": "^5.2.0",
     "rollup": "^2.12.0",
