--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chartjs-chart-treemap",
-  "version": "1.0.0-alpha2",
+  "version": "1.0.0-beta",
   "description": "Chart.js module for creating treemap charts",
   "main": "dist/chartjs-chart-treemap.js",
   "module": "dist/chartjs-chart-treemap.esm.js",
@@ -31,34 +31,34 @@
   },
   "homepage": "https://github.com/kurkle/chartjs-chart-treemap#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.10.2",
-    "@rollup/plugin-babel": "^5.0.2",
-    "@rollup/plugin-commonjs": "^12.0.0",
-    "@rollup/plugin-node-resolve": "^8.0.0",
-    "chart.js": "^3.0.0-alpha",
-    "eslint": "^7.1.0",
+    "@babel/preset-env": "^7.11.5",
+    "@rollup/plugin-babel": "^5.2.1",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "chart.js": "^3.0.0-beta.3",
+    "eslint": "^7.10.0",
     "eslint-config-chartjs": "^0.2.0",
     "eslint-config-esnext": "^4.1.0",
-    "eslint-plugin-html": "^6.0.2",
-    "jasmine": "^3.5.0",
-    "jasmine-core": "^3.5.0",
-    "karma": "^5.0.9",
+    "eslint-plugin-html": "^6.1.0",
+    "jasmine": "^3.6.1",
+    "jasmine-core": "^3.6.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage-istanbul-instrumenter": "^1.0.3",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-firefox-launcher": "^1.3.0",
-    "karma-jasmine": "^3.3.1",
+    "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.5",
     "karma-spec-reporter": "0.0.32",
     "karma-summary-reporter": "^1.8.0",
     "minimist": "^1.2.5",
-    "pixelmatch": "^5.2.0",
-    "rollup": "^2.12.0",
-    "rollup-plugin-terser": "^6.1.0"
+    "pixelmatch": "^5.2.1",
+    "rollup": "^2.28.2",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0-alpha"
+    "chart.js": "^3.0.0-beta.3"
   },
   "dependencies": {}
 }
