--- a/.github/workflows/npm-publish-next.yml
+++ b/.github/workflows/npm-publish-next.yml
@@ -5,7 +5,7 @@ name: Node.js Package
 
 on:
   release:
-    types: [released]
+    types: [prereleased]
 
 jobs:
   build:
@@ -34,6 +34,6 @@ jobs:
           registry-url: https://registry.npmjs.org/
       - run: npm ci
       - run: npm run build
-      - run: npm publish --access=public
+      - run: npm publish --access=public --tag=next
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
