--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "chartjs-chart-treemap",
-  "version": "1.0.0-beta.3",
+  "version": "1.0.0-beta.4",
   "description": "Chart.js module for creating treemap charts",
   "main": "dist/chartjs-chart-treemap.js",
   "module": "dist/chartjs-chart-treemap.esm.js",
   "scripts": {
     "autobuild": "rollup -c -w",
     "build": "rollup -c",
-    "dev": "karma start ---auto-watch --no-single-run --browsers chrome",
-    "docs": "cd docs && npm install && npm run build && mkdir -p ../dist && cp -r build ../dist/docs",
-    "lint": "eslint samples/**/*.html samples/**/*.js src/**/*.js test/**/*.js",
-    "test": "npm run lint && karma start --no-auto-watch --single-run --coverage"
+    "dev": "karma start --no-signle-run --auto-watch --browsers chrome",
+    "lint": "eslint --ignore-path .gitignore .",
+    "lint-fix": "eslint --ignore-path .gitignore --fix .",
+    "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
+    "test-lint": "npm run lint",
+    "test-karma": "karma start --auto-watch --single-run"
   },
   "repository": {
     "type": "git",
@@ -31,32 +33,35 @@
   },
   "homepage": "https://github.com/kurkle/chartjs-chart-treemap#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^16.0.0",
-    "@rollup/plugin-node-resolve": "^10.0.0",
-    "chart.js": "^3.0.0-beta.6",
-    "eslint": "^7.13.0",
-    "eslint-config-chartjs": "^0.2.0",
-    "eslint-config-esnext": "^4.1.0",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
+    "chart.js": "^3.0.0-beta.10",
+    "chartjs-adapter-date-fns": "^1.1.0-alpha.3",
+    "chartjs-test-utils": "^0.1.2",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.3",
+    "date-fns": "^2.16.1",
+    "eslint": "^7.19.0",
+    "eslint-config-chartjs": "^0.3.0",
+    "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.1",
-    "jasmine": "^3.6.3",
     "jasmine-core": "^3.6.0",
-    "karma": "^5.2.3",
+    "karma": "^6.1.0",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-instrumenter": "^1.0.3",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.5",
     "karma-spec-reporter": "0.0.32",
-    "karma-summary-reporter": "^1.9.0",
-    "minimist": "^1.2.5",
+    "karma-summary-reporter": "^2.0.0",
     "pixelmatch": "^5.2.1",
-    "rollup": "^2.33.2",
+    "rollup": "^2.38.4",
+    "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0-beta.3"
+    "chart.js": "^3.0.0-beta.10"
   },
   "dependencies": {}
 }
