--- a/package.json
+++ b/package.json
@@ -33,20 +33,20 @@
   },
   "homepage": "https://github.com/kurkle/chartjs-chart-treemap#readme",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.1.0",
-    "@rollup/plugin-node-resolve": "^11.2.0",
-    "chart.js": "^3.0.0-rc.2",
-    "chartjs-adapter-date-fns": "^1.1.0-beta.1",
+    "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-node-resolve": "^11.2.1",
+    "chart.js": "^3.1.0",
+    "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-test-utils": "^0.2.2",
-    "concurrently": "^6.0.0",
+    "concurrently": "^6.0.1",
     "cross-env": "^7.0.3",
-    "date-fns": "^2.19.0",
-    "eslint": "^7.22.0",
+    "date-fns": "^2.20.2",
+    "eslint": "^7.24.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.2",
     "jasmine-core": "^3.7.1",
-    "karma": "^6.2.0",
+    "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
     "karma-firefox-launcher": "^2.1.0",
@@ -56,7 +56,7 @@
     "karma-spec-reporter": "0.0.32",
     "karma-summary-reporter": "^2.0.2",
     "pixelmatch": "^5.2.1",
-    "rollup": "^2.42.1",
+    "rollup": "^2.45.1",
     "rollup-plugin-istanbul": "^3.0.0",
     "rollup-plugin-terser": "^7.0.2"
   },
