--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "Chart.js module for creating treemap charts",
   "main": "dist/chartjs-chart-treemap.js",
   "module": "dist/chartjs-chart-treemap.esm.js",
+  "types": "types/index.esm.d.ts",
   "scripts": {
     "autobuild": "rollup -c -w",
     "build": "rollup -c",
     "dev": "karma start --no-signle-run --auto-watch --browsers chrome",
-    "lint": "eslint --ignore-path .gitignore .",
-    "lint-fix": "eslint --ignore-path .gitignore --fix .",
+    "docs": "npm run build && vuepress build docs --no-cache",
+    "docs:dev": "npm run build && vuepress dev docs --no-cache",
+    "lint": "concurrently -r \"npm:lint-*\"",
+    "lint-js": "eslint \"src/**/*.js\" \"test/**/*.js\" \"docs/**/*.js\"",
+    "lint-md": "eslint \"**/*.md\"",
+    "lint-types": "eslint \"types/**/*.ts\" && tsc -p types/tests/",
     "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
     "test-lint": "npm run lint",
     "test-karma": "karma start --auto-watch --single-run"
@@ -34,7 +39,10 @@
   "homepage": "https://github.com/kurkle/chartjs-chart-treemap#readme",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^18.0.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "chart.js": "^3.1.0",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-test-utils": "^0.2.2",
@@ -45,6 +53,7 @@
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
     "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-markdown": "^2.0.1",
     "jasmine-core": "^3.7.1",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
@@ -57,11 +66,17 @@
     "karma-summary-reporter": "^2.0.2",
     "pixelmatch": "^5.2.1",
     "rollup": "^2.45.1",
+    "rollup-plugin-analyzer": "^4.0.0",
     "rollup-plugin-istanbul": "^3.0.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^4.2.4",
+    "vuepress": "^1.8.2",
+    "vuepress-plugin-flexsearch": "^0.1.0",
+    "vuepress-plugin-redirect": "^1.2.5",
+    "vuepress-theme-chartjs": "^0.2.0"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0-beta.10"
+    "chart.js": "^3.0.0"
   },
   "dependencies": {}
 }
