--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,12 +20,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 16
-      - run: |
+      - name: Build & test
+        run: |
           npm ci
           npm run build
           xvfb-run --auto-servernum npm test
         shell: bash
       - name: SonarCloud Scan
+        # Skip running on forks since it won't have access to secrets
+        if: github.repository == 'kurkle/chartjs-chart-treemap'      
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
