--- a/package.json
+++ b/package.json
@@ -39,23 +39,23 @@
     "url": "https://github.com/kurkle/chartjs-chart-treemap/issues"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^21.0.1",
+    "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-node-resolve": "^14.1.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "chart.js": "^3.6.0",
     "chartjs-adapter-date-fns": "^2.0.0",
-    "chartjs-test-utils": "^0.3.0",
-    "concurrently": "^6.0.1",
+    "chartjs-test-utils": "^0.4.0",
+    "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.20.2",
     "eslint": "^8.3.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
-    "eslint-plugin-html": "^6.1.2",
-    "eslint-plugin-markdown": "^2.0.1",
-    "jasmine-core": "^3.7.1",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-markdown": "^3.0.0",
+    "jasmine-core": "^4.4.0",
     "karma": "^6.3.2",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
@@ -63,7 +63,7 @@
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "karma-rollup-preprocessor": "^7.0.7",
-    "karma-spec-reporter": "0.0.32",
+    "karma-spec-reporter": "^0.0.34",
     "karma-summary-reporter": "^3.0.0",
     "pixelmatch": "^5.2.1",
     "rollup": "^2.45.1",
