--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Node.js CI
 on:
   push:
     branches: [ next, 2.x ]
-  pull_request:
+  pull_request_target:
     branches: [ next, 2.x ]
 
 jobs:
