--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: Node.js CI
 on:
   push:
     branches: [ next, 2.x ]
-  pull_request:
+  pull_request_target:
     branches: [ next, 2.x ]
 
 jobs:
@@ -27,8 +27,6 @@ jobs:
           xvfb-run --auto-servernum npm test
         shell: bash
       - name: SonarCloud Scan
-        # Skip running on forks since it won't have access to secrets
-        if: github.repository == 'kurkle/chartjs-chart-treemap'      
         uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
