--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-rollup-preprocessor": "^7.0.7",
+    "karma-rollup-preprocessor": "7.0.7",
     "karma-spec-reporter": "^0.0.34",
     "karma-summary-reporter": "^3.0.0",
     "pixelmatch": "^5.2.1",
