Add sample using Datalabels plugin (#107)
* Add sample using Datalabels plugin

* sets karma-rollup-preprocessor to version 7.0.7

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "chart.js": "^3.6.0",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-test-utils": "^0.4.0",
+    "chartjs-plugin-datalabels": "^2.0.0", 
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
     "date-fns": "^2.20.2",
@@ -62,7 +63,7 @@
     "karma-firefox-launcher": "^2.1.0",
     "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
-    "karma-rollup-preprocessor": "^7.0.7",
+    "karma-rollup-preprocessor": "7.0.7",
     "karma-spec-reporter": "^0.0.34",
     "karma-summary-reporter": "^3.0.0",
     "pixelmatch": "^5.2.1",
