--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint-types": "eslint \"types/**/*.ts\" && tsc -p types/tests/",
     "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
     "test-lint": "npm run lint",
+    "test-types": "tsc -p types/tests/",
     "test-karma": "karma start --auto-watch --single-run"
   },
   "repository": {
