--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "karma-rollup-preprocessor": "7.0.7",
     "karma-spec-reporter": "^0.0.34",
     "karma-summary-reporter": "^3.0.0",
+    "ng-hammerjs": "^2.0.8",
     "pixelmatch": "^5.2.1",
     "rollup": "^2.79.1",
     "rollup-plugin-analyzer": "^4.0.0",
