Add performance label to release-drafter

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -17,6 +17,7 @@ categories:
     labels: 
       - 'chore'
       - 'dependencies'
+      - 'performance'
       - 'refactoring'
 exclude-labels:
   - 'infrastructure'
