--- a/package.json
+++ b/package.json
@@ -41,12 +41,16 @@
     "url": "https://github.com/kurkle/chartjs-chart-treemap/issues"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.0",
-    "@rollup/plugin-json": "^5.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@babel/core": "^7.20.2",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.1.0",    
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "chart.js": "^3.8.0",
+    "babel-loader": "^8.3.0",
+    "chart.js": "^4.0.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-plugin-datalabels": "^2.0.0",
     "chartjs-plugin-zoom": "^1.2.0",
@@ -71,17 +75,17 @@
     "karma-summary-reporter": "^3.0.0",
     "ng-hammerjs": "^2.0.8",
     "pixelmatch": "^5.2.1",
-    "rollup": "^2.79.1",
+    "rollup": "^3.3.0",
+    "rollup-plugin-istanbul": "^4.0.0",
     "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-istanbul": "^3.0.0",
-    "rollup-plugin-terser": "^7.0.2",
     "typescript": "^4.3.5",
-    "vuepress": "^1.8.2",
+    "vuepress": "^1.9.7",
     "vuepress-plugin-flexsearch": "^0.3.0",
     "vuepress-plugin-redirect": "^1.2.5",
-    "vuepress-theme-chartjs": "^0.2.0"
+    "vuepress-theme-chartjs": "^0.2.0",
+    "webpack": "^4.46.0"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0"
+    "chart.js": ">=3.0.0"
   }
 }
