--- a/.github/workflows/npmpublish.yml
+++ b/.github/workflows/npmpublish.yml
@@ -18,11 +18,10 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 16
+    - uses: actions/checkout@v3
+      uses: actions/setup-node@v3
+        with:
+          cache: npm
     - name: Test
       run: |
         npm ci
@@ -32,11 +31,8 @@ jobs:
     needs: [test, setup]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
       - name: Setup and build
         run: |
           npm ci
