--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "chartjs-chart-treemap",
   "homepage": "https://chartjs-chart-treemap.pages.dev/",
-  "version": "2.1.3",
+  "version": "2.2.0",
   "description": "Chart.js module for creating treemap charts",
-  "main": "dist/chartjs-chart-treemap.js",
-  "module": "dist/chartjs-chart-treemap.esm.js",
+  "type": "module",
+  "main": "dist/chartjs-chart-treemap.esm.js",
   "types": "types/index.esm.d.ts",
+  "jsdelivr": "dist/chartjs-chart-treemap.min.js",
+  "unpkg": "dist/chartjs-chart-treemap.min.js",
+  "exports": {
+    "types": "./types/index.esm.d.ts",
+    "import": "./dist/chartjs-chart-treemap.esm.js",
+    "require": "./dist/chartjs-chart-treemap.min.js"
+  },
   "scripts": {
     "autobuild": "rollup -c -w",
     "build": "rollup -c",
-    "dev": "karma start --no-signle-run --auto-watch --browsers chrome",
-    "dev:ff": "karma start --no-signle-run --auto-watch --browsers firefox",
+    "dev": "karma start ./karma.conf.cjs --no-signle-run --auto-watch --browsers chrome",
+    "dev:ff": "karma start ./karma.conf.cjs --no-signle-run --auto-watch --browsers firefox",
     "docs": "npm run build && vuepress build docs --no-cache",
     "docs:dev": "concurrently \"npm:autobuild\" \"vuepress dev docs --no-cache\"",
     "lint": "concurrently -r \"npm:lint-*\"",
@@ -20,7 +27,7 @@
     "test": "cross-env NODE_ENV=test concurrently \"npm:test-*\"",
     "test-lint": "npm run lint",
     "test-types": "tsc -p types/tests/",
-    "test-karma": "karma start --auto-watch --single-run"
+    "test-karma": "karma start ./karma.conf.cjs --auto-watch --single-run"
   },
   "repository": {
     "type": "git",
@@ -32,7 +39,8 @@
     "treemap"
   ],
   "files": [
-    "dist/*.js",
+    "dist/*",
+    "!dist/docs/**",
     "types/index.esm.d.ts"
   ],
   "author": "Jukka Kurkela",
@@ -41,19 +49,18 @@
     "url": "https://github.com/kurkle/chartjs-chart-treemap/issues"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^23.0.0",
-    "@rollup/plugin-json": "^5.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-json": "^5.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "chart.js": "^3.8.0",
-    "chartjs-adapter-date-fns": "^2.0.0",
-    "chartjs-plugin-datalabels": "^2.0.0",
-    "chartjs-plugin-zoom": "^1.2.0",
+    "chart.js": "^4.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "chartjs-plugin-zoom": "^2.0.0",
     "chartjs-test-utils": "^0.5.0",
     "concurrently": "^7.4.0",
     "cross-env": "^7.0.3",
-    "date-fns": "^2.20.2",
     "eslint": "^8.3.0",
     "eslint-config-chartjs": "^0.3.0",
     "eslint-plugin-es": "^4.1.0",
@@ -67,21 +74,20 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "karma-rollup-preprocessor": "7.0.7",
-    "karma-spec-reporter": "^0.0.34",
+    "karma-spec-reporter": "^0.0.35",
     "karma-summary-reporter": "^3.0.0",
     "ng-hammerjs": "^2.0.8",
     "pixelmatch": "^5.2.1",
-    "rollup": "^2.79.1",
+    "rollup": "^3.3.0",
     "rollup-plugin-analyzer": "^4.0.0",
-    "rollup-plugin-istanbul": "^3.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.3.5",
-    "vuepress": "^1.8.2",
+    "rollup-plugin-istanbul": "^4.0.0",
+    "typescript": "^4.7.4",
+    "vuepress": "^1.9.7",
     "vuepress-plugin-flexsearch": "^0.3.0",
     "vuepress-plugin-redirect": "^1.2.5",
     "vuepress-theme-chartjs": "^0.2.0"
   },
   "peerDependencies": {
-    "chart.js": "^3.0.0"
+    "chart.js": ">=3.0.0"
   }
 }
