--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "version": "2.3.1",
   "description": "Chart.js module for creating treemap charts",
   "type": "module",
-  "main": "dist/chartjs-chart-treemap.esm.js",
+  "main": "dist/chartjs-chart-treemap.cjs",
+  "module": "dist/chartjs-chart-treemap.esm.js",
   "types": "types/index.esm.d.ts",
   "jsdelivr": "dist/chartjs-chart-treemap.min.js",
   "unpkg": "dist/chartjs-chart-treemap.min.js",
   "exports": {
     "types": "./types/index.esm.d.ts",
     "import": "./dist/chartjs-chart-treemap.esm.js",
-    "require": "./dist/chartjs-chart-treemap.min.js"
+    "require": "./dist/chartjs-chart-treemap.cjs",
+    "script": "./dist/chartjs-chart-treemap.min.js"
   },
+  "sideEffects": [
+    "dist/chartjs-chart-treemap.cjs",
+    "dist/chartjs-chart-treemap.min.js"
+  ],
   "scripts": {
     "autobuild": "rollup -c -w",
     "build": "rollup -c",
